# django-rest-postgres

./: db.sqlite3  docker-compose.yml  pyproject.toml  readme.md
cars/: tests.py
main/: settings.py  urls.py
